--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,17 +2,18 @@
 FROM node:13.7.0-alpine3.11
 
 #creating app filder inside container and setting workdir
-RUN mkdir -p /srv/app/client
-WORKDIR /srv/app/client
+RUN mkdir -p /app/client
+WORKDIR /app/client
 
 #copying package.json and lock into workdir directory
-COPY package*.json /srv/app/client/
+COPY package*.json /app/client/
 
 #running npm install
 RUN npm install
+RUN npm run build
 
 #copying all files into workdir
-COPY . /srv/app/client
+COPY . /app/client
 
 #running commands
 CMD [ "npm", "start" ]
