--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-API_HOST="htpp://localhost:3000/"
-APP_SERVER_PORT=8080
-REACT_APP_PORT=5000
+API_HOST="http://localhost"
+APP_SERVER_PORT=8000
+REACT_APP_PORT=3000
