--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:8080",
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "proxy": "http://localhost:8000",
   "browserslist": {
     "production": [
       ">0.2%",
