--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,10 @@ services:
       APP_SERVER_PORT: ${APP_SERVER_PORT}
     ports:
       - ${APP_SERVER_PORT}:${APP_SERVER_PORT}
+#    networks:
+#      - react
     volumes:
-      - ./server/src:/srv/app/server/src
+      - ./server/src:/app/server/src
     command: npm start
   client:
     build: ./client
@@ -22,9 +24,15 @@ services:
     ports:
       - ${REACT_APP_PORT}:${REACT_APP_PORT}
     volumes:
-      - ./client/src:/serv/app/client/src
-      - ./client/public:/srv/app/client/public
-      - ./client/build:/srv/app/client/build  
+      - ./client/src:/app/client/src
+      - ./client/src/components:/app/client/src/components
+      - ./client/public:/app/client/public
+#    networks:
+#      - react
     links:
       - server
-    command: npm run start      
+    command: npm run start
+
+#networks:
+#  react:
+#    driver: bridge
