--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "express-server",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
